[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_library"
version = "0.1.0"
description = "A simple library for tracking a user's books."
readme = "README.rst"
authors = [
  {name = "Ayo Onipe", email = "ayosemail@gmail.com"}
]
maintainers = [
  {name = "Ayo Onipe", email = "ayosemail@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/z-sega/py_library/issues"
changelog = "https://github.com/z-sega/py_library/blob/master/changelog.md"
homepage = "https://github.com/z-sega/py_library"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

